<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sub_page_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <include layout="@layout/title_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:scrollbars="none"
        tools:ignore="RelativeOverlap">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/rl_account_security"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:bar_leftText="@string/account_security"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_new_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:bar_leftText="@string/notifications"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:bar_leftText="@string/do_not_disturb"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />


            <com.hjq.widget.layout.SettingBar
                android:id="@+id/rl_chats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/chats"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/rl_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:bar_leftText="@string/privacy"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/rl_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/general"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/setting_cache"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/rl_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:bar_leftText="@string/about"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:bar_leftText="@string/help_feedback"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:bar_leftText="@string/wechat_services"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:bar_leftText="@string/switch_account"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/rl_log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_15"
                app:bar_leftText="@string/setting_exit"
                app:bar_leftTextColor="@color/red" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>