<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sub_page_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height" />

    <com.hjq.widget.layout.SettingBar
        android:id="@+id/rl_multi_languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        app:bar_leftText="@string/multi_languages"
        app:bar_rightDrawable="@drawable/arrows_right_ic" />
    <com.hjq.widget.layout.SettingBar
        android:id="@+id/rl_auto_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        app:bar_leftText="@string/auto_start_setting"
        app:bar_rightDrawable="@drawable/arrows_right_ic" />

    <com.hjq.widget.layout.SettingBar
        android:id="@+id/rl_power"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/power_manager_setting"
        app:bar_rightDrawable="@drawable/arrows_right_ic" />

    <com.hjq.widget.layout.SettingBar
        android:id="@+id/rl_battery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/battery_manager_setting"
        app:bar_rightDrawable="@drawable/arrows_right_ic" />

    <com.hjq.widget.layout.SettingBar
        android:id="@+id/rl_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/discover_channel"
        app:bar_rightDrawable="@drawable/arrows_right_ic" />

</LinearLayout>