<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/sub_page_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:bar_rightDrawable="@drawable/icon_checked"
                app:bar_leftText="@string/follow_system"/>

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_simplified_chinese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_rightDrawable="@drawable/icon_checked"
                app:bar_leftText="@string/simplified_chinese"/>
            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_rightDrawable="@drawable/icon_checked"
                app:bar_leftText="@string/english"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>